--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+/*------------------- Start Global CSS ------------------- */
 * {
   padding: 0;
   margin: 0;
@@ -21,7 +22,6 @@ img {
   width: 100%;
   display: block;
 }
-
 .p-gray {
   font-size: 0.75rem;
   color: #9fa3a7;
@@ -29,6 +29,7 @@ img {
   line-height: 1.25rem;
   letter-spacing: 0.125rem;
 }
+/*------------------- End Global CSS ------------------- */
 
 /* grid container */
 .container {
@@ -42,7 +43,7 @@ img {
     "item8 item9 item10 item10";
 }
 
-/* item 1 */
+/*------------------- Start Item 1 ------------------- */
 .item-1 {
   grid-area: item1;
   display: flex;
@@ -73,8 +74,9 @@ img {
   color: #9fa3a7;
   line-height: 1.625rem;
 }
+/*------------------- End Item 1 ------------------- */
 
-/*------------- item 2 -------------*/
+/*------------------- Start Item 2 ------------------- */
 .item-2 {
   grid-area: item2;
   display: flex;
@@ -98,8 +100,9 @@ img {
   font-size: 0.875rem;
   text-decoration: underline;
 }
+/*------------------- End Item 2 ------------------- */
 
-/*------------- item 3 -------------*/
+/*------------------- Start Item 3 ------------------- */
 .item-3 {
   grid-area: item3;
   display: flex;
@@ -131,7 +134,9 @@ img {
 .item-3 .contant a span {
   font-size: 1rem;
 }
-/*------------- item 4 -------------*/
+/*------------------- End Item 3 ------------------- */
+
+/*------------------- Start Item 4 ------------------- */
 .item-4 {
   grid-area: item4;
   padding: 3.75rem 1.5625rem 0;
@@ -158,7 +163,6 @@ img {
   line-height: 2rem;
   margin: 0.625rem 0 1.25rem;
 }
-
 .item-4 .left p {
   color: #9fa3a7;
   font-size: 0.875rem;
@@ -172,8 +176,9 @@ img {
   letter-spacing: 0.125rem;
   font-weight: 700;
 }
+/*------------------- Start Item 4 ------------------- */
 
-/*------------- item 5 -------------*/
+/*------------------- Start Item 5 ------------------- */
 .item-5 {
   grid-area: item5;
   background-color: #8f76bc;
@@ -238,8 +243,9 @@ img {
   border-radius: 3.125rem;
   letter-spacing: 0.1563rem;
 }
+/*------------------- End Item 5 ------------------- */
 
-/*------------- item 6 -------------*/
+/*------------------- Start Item 6 ------------------- */
 .item-6 {
   grid-area: item6;
   display: flex;
@@ -263,8 +269,9 @@ img {
   font-weight: 700;
   letter-spacing: 0.1563rem;
 }
+/*------------------- End Item 6 ------------------- */
 
-/*------------- item 7 -------------*/
+/*------------------- Start Item 7 ------------------- */
 .item-7 {
   grid-area: item7;
   padding: 1.875rem 0 0;
@@ -303,8 +310,9 @@ img {
 .item-7 img {
   width: 70%;
 }
+/*------------------- End Item 7 ------------------- */
 
-/*------------- item 8 -------------*/
+/*------------------- Start Item 8 ------------------- */
 .item-8 {
   grid-area: item8;
   background-color: #38d5f4;
@@ -337,7 +345,9 @@ img {
   width: 80%;
   margin-top: 0.625rem;
 }
-/*------------- item 9 -------------*/
+/*------------------- End Item 8 ------------------- */
+
+/*------------------- Start Item 9 ------------------- */
 .item-9 {
   padding: 1.875rem 0;
   grid-area: item9;
@@ -363,8 +373,9 @@ img {
   font-size: 1.375rem;
   font-weight: 400;
 }
+/*------------------- End Item 9 ------------------- */
 
-/*------------- item 10 -------------*/
+/*------------------- Start Item 10 ------------------- */
 .item-10 {
   grid-area: item10;
   display: flex;
@@ -373,7 +384,6 @@ img {
   background-color: #2c2c2c;
   overflow: hidden;
 }
-
 .item-10 .img {
   width: 20%;
   position: relative;
@@ -388,3 +398,4 @@ img {
   font-size: 1.375rem;
   font-weight: 400;
 }
+/*------------------- End Item 10 ------------------- */
